--- a/cssTest.html
+++ b/cssTest.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS 연동 방법</title>
-  <!--지시사항 1번에 내용을 코드로 작성해보세요.-->
+  
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Hello world</h1>
+  <!--지시사항 1번에 따라 <h1> 태그를 수정해보세요.-->
+  <h1 style="color: blue;">Hello world</h1>
 </body>
 </html>
