css class 선택자 알아보기

--- a/cssSelector.html
+++ b/cssSelector.html
@@ -6,7 +6,10 @@
   <!--지시사항 2번을 따라 CSS 선택자를 적용해 Style을 부여해보세요.-->
   <style>
       h2 {
-          color: red;
+        color: red;
+      }
+      .coding {
+        color: green;
       }
   </style>
 
