--- a/cssSelector.html
+++ b/cssSelector.html
@@ -5,12 +5,15 @@
   <title>CSS 선택자</title>
   <!--지시사항 2번을 따라 CSS 선택자를 적용해 Style을 부여해보세요.-->
   <style>
-      h2 {
-        color: red;
-      }
-      .coding {
+    h2 {
+      color: red;
+    }
+    .coding {
         color: green;
-      }
+    }
+    #coding {
+        color: yellow;
+    }
   </style>
 
 </head>
